WebCore/rendering/RenderWidget.cpp
@@ -325,6 +325,13 @@ void RenderWidget::updateWidgetPosition()
     }
 }
 
+void RenderWidget::widgetPositionsUpdated()
+{
+    if (!m_widget)
+        return;
+    m_widget->widgetPositionsUpdated();
+}
+
 void RenderWidget::setSelectionState(SelectionState state)
 {
     if (selectionState() != state) {
