WebKit/chromium/src/WebPluginContainerImpl.cpp
@@ -170,6 +170,12 @@ void WebPluginContainerImpl::frameRectsChanged()
     reportGeometry();
 }
 
+void WebPluginContainerImpl::widgetPositionsUpdated()
+{
+    Widget::widgetPositionsUpdated();
+    reportGeometry();
+}
+
 void WebPluginContainerImpl::setParentVisible(bool parentVisible)
 {
     // We override this function to make sure that geometry updates are sent
